# Galactic-Quest

./: CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py
galactic_quest/: __init__.py  main.py
galactic_quest/data/: __init__.py  story.json
galactic_quest/game/: __init__.py  audio.py  story.py
galactic_quest/ui/: __init__.py  game_window.py  styles.py
tests/: test_story_manager.py
