[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "galactic-quest"
version = "1.0.0"
description = "A space-themed adventure game built with PyQt6"
authors = [{name = "Andrew Vincent", email = "andrewtvincent518@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt6>=6.4.0",
    "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]
build = [
    "cx-Freeze>=6.15.0",
]

[project.scripts]
galactic-quest = "galactic_quest.main:main"

[project.urls]
Homepage = "https://github.com/andrewtvincent518/Galactic-Quest"
Repository = "https://github.com/andrewtvincent518/Galactic-Quest"

[tool.setuptools.packages.find]
where = ["."]
include = ["galactic_quest*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py38']